# fastapi-starter

./: .env.sample  README.md  SCRIPTS_TO_CLI_CONVERSION.md  project-structure.md  pyproject.toml
.github/instructions/: fastapi.instructions.md
api_app/: run.py
api_app/api/: __init__.py
api_app/cmd/: api.py
api_app/core/: base_repository.py  base_schemas.py  base_use_case.py  config.py
api_app/infrastructure/: database.py
api_app/models/: __init__.py  auth_model.py  image_model.py  token_model.py
api_app/repositories/: base_repo.py  user_repo.py
api_app/schemas/: user_schema.py
api_app/services/: auth_service.py  user_service.py
api_app/utils/: schema.py
api_app_new/: run.py
api_app_new/core/: base_repository.py  config.py  dependencies.py  gridfs.py  router.py  schemas.py  security.py
api_app_new/infrastructure/: database.py  gridfs.py
api_app_new/models/: auth_model.py  user_model.py
api_app_new/utils/: request_logs.py
apiapp/api/: __init__.py
apiapp/cmd/: controller.py
apiapp/core/: base_repository.py  router.py  security.py
apiapp/infrastructure/: database.py
apiapp/models/: __init__.py
apiapp/repositories/: base_repo.py  user_repo.py
apiapp/schemas/: auth_schema.py  base_schema.py
app/: __init__.py
app/core/: config.py  (+3 more)
cli/: README.md  __init__.py  create_module.py  init_admin.py  main.py
docs/: AUTH_STRATEGY.md  repository-usecase-pattern.md
sang_cli/: README.md  create_module.py  main.py
scripts/: README.md  create-example-module  create-module  init-admin  run-api  run-dev  run-new-dev  run-prod  run-worker
(+73 files in other folders)
