[tool.poetry]
name = "apiapp"
version = "0.1.0"
description = ""
authors = ["jakee <jakee.indapanya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "^0.117.1"
fastapi-cli = "^0.0.13"
fastapi-paginate = "^0.1.0"
pydantic-settings = "^2.11.0"
beanie = "^2.0.0"
python-jose = "^3.5.0"
bcrypt = "^4.3.0"
fastapi-pagination = "^0.14.1"
loguru = "^0.7.3"
pydantic = {extras = ["email"], version = "^2.11.9"}
pymongo = "^4.15.1"
jwcrypto = "^1.5.6"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
